--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -1,15 +1,15 @@
-run_times: 'single'
-place: 'ne_cambodia_low_kmeans'
+run_times: 'multiple'
+place: 'countries_plus'
 startYear: 1990
 endYear: 2021
 seedSpacing: 10
 randomPts: 20000
 image_source: 'servir'
 assetsRoot: 'projects/ee-ltop-py/assets/'
-assetsChild: 'LTOP_py_NE_Cambodia_low_kmeans'
+assetsChild: 'LTOP_py_countries_plus'
 aoi: 'None'    
-maxClusters: 100
-minClusters: 100
+maxClusters: 200
+minClusters: 200
 param_scoring_inputs: "/vol/v1/proj/LTOP_FTV_Py/"
 outfile: "/vol/v1/proj/LTOP_FTV_Py/selected_lt_params/"
 njobs: 8
