--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -1,20 +1,21 @@
-run_times: 'single'
-place: 'Cambodia_200'
+run_times: "single"
+place: "Cambodia_200"
 startYear: 1990
 endYear: 2021
 seedSpacing: 10
 randomPts: 20000
 image_source: 'servir'
-assetsRoot: 'projects/ee-ltop-py/assets/'
-assetsChild: 'LTOP_py_Cambodia_200'
-aoi: 'None'    
+assetsRoot: "projects/ee-ltop-py/assets/"
+assetsChild: "LTOP_py_Cambodia_200"
+aoi: "None"    
 maxClusters: 200
 minClusters: 200
 param_scoring_inputs: "/vol/v1/proj/LTOP_FTV_Py/"
 outfile: "/vol/v1/proj/LTOP_FTV_Py/selected_lt_params/"
 njobs: 8
 cloud_bucket: "ltop_assets_storage"
-testing: "false"
+testing: "false" 
+credentials: "/vol/v1/proj/LTOP_FTV_Py/LTOP_FTV_Py/scripts/creds.json"
     
 # only needed for medoid composites
 startDate: '11-20'
