--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -1,19 +1,19 @@
 run_times: 'single'
 place: 'Cambodia_200'
 startYear: 1990
-endYear: 2022
+endYear: 2021
 seedSpacing: 10
-randomPts: 20000
+randomPts: 10000
 image_source: 'servir'
-assetsRoot: 'projects/servir-mekong/'
-assetsChild: 'LTOP_LMK'
+assetsRoot: 'users/clarype/'
+assetsChild: 'LTOP_Py'
 aoi: 'None'    
-maxClusters: 200
-minClusters: 200
-param_scoring_inputs: "/home/ubuntu/LTOP_FTV_Py/"
-outfile: "/home/ubuntu/LTOP_FTV_Py/selected_lt_params_LMK/"
+maxClusters: 1000
+minClusters: 1000
+param_scoring_inputs: "/vol/v2/LTOP_FTV_Py_outputs/param_scoring/"
+outfile: "/vol/v2/LTOP_FTV_Py_outputs/outfiles/"
 njobs: 8
-cloud_bucket: "ltop_bucket"
+cloud_bucket: "ltop-py"
 testing: "false"
     
 # only needed for medoid composites
