--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -7,7 +7,7 @@ randomPts: 10000
 image_source: 'servir'
 assetsRoot: 'users/clarype/'
 assetsChild: 'LTOP_Py'
-aoi: 'None'    
+aoi: ee.FeatureCollection("users/clarype/cambodia").geometry()    
 maxClusters: 1000
 minClusters: 1000
 param_scoring_inputs: "/vol/v2/LTOP_FTV_Py_outputs/param_scoring/"
