Change this file to run on 5000 clusters so that we have a larger sample for chagne detection. Also changed the name and output locations.

--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -3,15 +3,15 @@ place: 'Cambodia_200'
 startYear: 1990
 endYear: 2021
 seedSpacing: 10
-randomPts: 10000
+randomPts: 50000
 image_source: 'servir'
 assetsRoot: 'users/clarype/'
-assetsChild: 'LTOP_Py'
+assetsChild: 'LTOP_Py2_5000'
 aoi: ee.FeatureCollection("users/clarype/cambodia").geometry()    
-maxClusters: 1000
-minClusters: 1000
-param_scoring_inputs: "/vol/v2/LTOP_FTV_Py_outputs/param_scoring/"
-outfile: "/vol/v2/LTOP_FTV_Py_outputs/outfiles/"
+maxClusters: 5000
+minClusters: 5000
+param_scoring_inputs: "/vol/v2/LTOP_FTV_Py_outputs/param_scoring2/"
+outfile: "/vol/v2/LTOP_FTV_Py_outputs/outfiles2/"
 njobs: 8
 cloud_bucket: "ltop-py"
 testing: "false"
